# iref

./: .gitignore  LICENSE  README.md  pyproject.toml  tree.txt
src/iref/: __init__.py  cli.py  config.py  config_store.py  models.py  queue_cmd.py
src/iref/queue/: review.py
src/iref/store/: queue_store.py
src/iref/utils/: open_image.py
